--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,85 +4,86 @@ name: release & publish workflow
 
 # Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branch: release
-    tags:
-      - 'v*'
+    # Triggers the workflow on push or pull request events but only for the master branch
+    push:
+        branch: release
+        tags:
+            - "v*"
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    # Allows you to run this workflow manually from the Actions tab
+    workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  release:
-    name: Create Release
-    runs-on: ubuntu-20.04
+    # This workflow contains a single job called "build"
+    release:
+        name: Create Release
+        runs-on: ubuntu-20.04
 
-    strategy:
-      matrix:
-        python-versions: [3.8]
+        strategy:
+            matrix:
+                python-versions: [3.8]
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+        # Steps represent a sequence of tasks that will be executed as part of the job
+        steps:
+            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+            - uses: actions/checkout@v2
 
-      - name: generate change log
-        uses: heinrichreimer/github-changelog-generator-action@v2.3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          issues: true
-          issuesWoLabels: true
-          pullRequests: true
-          prWoLabels: true
-          unreleased: true
-          addSections: '{"documentation":{"prefix":"**Documentation:**","labels":["documentation"]}}'
-          output: CHANGELOG.md
+            - name: generate change log
+              uses: heinrichreimer/github-changelog-generator-action@v2.3
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
+                  issues: true
+                  issuesWoLabels: true
+                  pullRequests: true
+                  prWoLabels: true
+                  unreleased: true
+                  addSections: '{"documentation":{"prefix":"**Documentation:**","labels":["documentation"]}}'
+                  output: CHANGELOG.md
+                  sinceTag: v0.1.1
 
-      - uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-versions }}
+            - uses: actions/setup-python@v2
+              with:
+                  python-version: ${{ matrix.python-versions }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tox-gh-actions poetry
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install tox-gh-actions poetry
 
-      - name: pre-publish documentation
-        run: |
-          poetry install -E doc
-          poetry run mkdocs build
+            - name: pre-publish documentation
+              run: |
+                  poetry install -E doc
+                  poetry run mkdocs build
 
-      - name: publish documentation
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          personal_token: ${{ secrets.PERSONAL_TOKEN }}
-          publish_dir: ./site
+            - name: publish documentation
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                  personal_token: ${{ secrets.PERSONAL_TOKEN }}
+                  publish_dir: ./site
 
-      - name: Build wheels and source tarball
-        run: >-
-          poetry build
+            - name: Build wheels and source tarball
+              run: >-
+                  poetry build
 
-      - name: show temporary files
-        run: >-
-          ls -l
+            - name: show temporary files
+              run: >-
+                  ls -l
 
-      - name: create github release
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          body_path: ./CHANGELOG.md
-          files: dist/*.whl
-          draft: false
-          prerelease: false
+            - name: create github release
+              id: create_release
+              uses: softprops/action-gh-release@v1
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                  body_path: ./CHANGELOG.md
+                  files: dist/*.whl
+                  draft: false
+                  prerelease: false
 
-      - name:
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
-          skip_existing: true
+            - name:
+              uses: pypa/gh-action-pypi-publish@release/v1
+              with:
+                  user: __token__
+                  password: ${{ secrets.PYPI_API_TOKEN }}
+                  skip_existing: true
